--- a/index.html
+++ b/index.html
@@ -27,24 +27,7 @@
         />
       </div>
     </header>
-    <main class="main">
-      <!-- <div class="card">
-        <div class="card__description">
-          <h3>Overview</h3>
-          <p></p>
-        </div>
-        <div class="card__photo">
-          <img
-            src="https://image.tmdb.org/t/p/w1280//1g0dhYtq4irTY1GPXvft6k4YLjm.jpg"
-            alt="image"
-          />
-        </div>
-        <div class="card__info">
-          <h2></h2>
-          <div class="mark"></div>
-        </div>
-      </div> -->
-    </main>
+    <main class="main"></main>
     <footer class="footer">
       <div class="data">
         <span>©</span>
